# my_coding_tests

./: a.out  beautiful_vowel.cpp  uint_reverse_loop.cpp
Eigen/: a.out  aitken_neville.cpp  cwisesqrtc.cpp  main.cpp  main1.cpp  matrix_exponential.cpp  rowwisesum.cpp  tall_matrix_qr.cpp  triangular.cpp
bash_tests/: assignments.txt  fgrep_test.sh  files.txt  locate_latex_files.sh  look_inside_files.sh  test.txt
cmake/python3check/: CMakeLists.txt
cpp_compilation/: h1.hpp  main.cpp
cpptests/: a.out  lambda.cpp  lambda_garbage_value.cpp  lrvalue.cpp  noname_constructor.cpp
javascript/: basic_webpage_script.html
leetcode/: a.out  advance_base_number.cpp  allocate_mailboxes.cpp  colsum.cpp  expression_add_operators.cpp  generate_combinatorial.cpp  remove_comments.cpp  stone_game.cpp
namespaces/classes/: a.out  h1.hpp  h2.hpp  main.cpp
namespaces/standalonefunctions/: a.out  h1.hpp  h2.hpp  main.cpp
template_test/: main.cpp
